--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "web-vitals": "^2.1.4"
   },
